@@ -11,6 +11,7 @@ Date: 29. 08. 2025
   Optimizations:
     - Improved performance by limiting entity exclusion checks to new entities only
     - Optimized exclusion algorithm by using hash tables instead of linear scanning
+    - Enhanced logistics network scanning efficiency by caching item availability data
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.0
 Date: 24. 08. 2025
